...
    CardKConfig.shared.bindingCVCRequired = true;
    CardKConfig.shared.bindings = self._fetchBindingCards();
    CardKConfig.shared.isTestMod = true;
    CardKConfig.shared.mdOrder = "ae0adc7d-ef2d-7a2c-96c5-e8f61917ef58";
    CardKConfig.shared.mrBinApiURL = "https://mrbin.io/bins/display";
    CardKConfig.shared.mrBinURL = "https://mrbin.io/bins/";
    CardKConfig.shared.bindingsSectionTitle = "Your cards";
    CardKConfig.shared.pubKey = publicKey;
    CardKConfig.shared.isEditBindingListMode = false;
    
    let controller = CardKViewController();
    controller.cKitDelegate = self;
    
...
      SectionItem(title: "CardKit: v\(CardKConfig.getVersion())", kind: .version, isShowChevron: false, language: ""),
      SectionItem(title: "CardKitCore: v0.0.20", kind: .version, isShowChevron: false, language: ""),
      SectionItem(title: "3DSSDK: v\(Ecom3DS2Service().getVersion())", kind: .version, isShowChevron: false, language: ""),
    ]),
    
    Section(title: "Modal", items: [
      SectionItem(title: "Open Light with bindings", kind: .lightTheme, isShowChevron: true, language: ""),
      SectionItem(title: "Dark Light", kind: .darkTheme, isShowChevron: true, language: ""),
      SectionItem(title: "System theme", kind: .systemTheme, isShowChevron: true, language: ""),
      SectionItem(title: "Custom theme", kind: .customTheme, isShowChevron: true, language: ""),
    ]),
    
    Section(title: "Navigation", items: [
      SectionItem(title: "Light theme with bindings", kind: .navLightTheme, isShowChevron: true, language: ""),
      SectionItem(title: "Light theme with edit mode", kind: .editMode, isShowChevron: true, language: ""),
      SectionItem(title: "Dark theme", kind: .navDarkTheme, isShowChevron: true, language: ""),
      SectionItem(title: "System theme", kind: .navSystemTheme, isShowChevron: true, language: ""),
      SectionItem(title: "The New Card form without save card", kind: .navNewCardWithoutSaveCard, isShowChevron: true, language: ""),
      SectionItem(title: "The New Card form without card holder", kind: .navNewCardWithoutCardholder, isShowChevron: true, language: "")
    ]),
    
    Section(title: "CardKPaymentView", items: [
      SectionItem(title: "Apple Pay", kind: .paymentView, isShowChevron: true, language: ""),
    ]),
    
...
    paymentView.cardPaybutton.setTitleColor(.white, for: .normal);
    paymentView.cardPaybutton.setTitle("New card", for: .normal);
  }
  
  func didLoad(_ controller: CardKViewController) {
    controller.allowedCardScaner = CardIOUtilities.canReadCardWithCamera();
    controller.purchaseButtonTitle = "Custom purchase button";
    controller.allowSaveBinding = allowSaveBinding;
    controller.isSaveBinding = isSaveBinding;
    controller.displayCardHolderField = displayCardholderField;
  }
  
  func cardKitViewController(_ controller: UIViewController, didCreateSeToken seToken: String, allowSaveBinding: Bool, isNewCard: Bool) {
...
